# finality

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
FINALITY-main/: .gitignore  CHAIN_INFO.md  COMPLETE_DEPLOYMENT_SUMMARY.md  COMPLETE_STATUS.md  COMPLETE_TECHNICAL_DOCUMENTATION.md  COMPLETE_TESTING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPOSIT_FAILURE_FIX.md  ENABLE_TRADING_GUIDE.md  FINALITY_TECHNICAL_DOCUMENTATION.md  FINAL_INSTRUCTIONS.md  FINAL_SUMMARY.md  FRONTEND_TESTING_GUIDE.md  GET_ETH_NOW.md  GET_WVARA_INSTRUCTIONS.md  GET_WVARA_NOW.md  HOODI_EXPLORER_ALTERNATIVES.md  HOODI_EXPLORER_URL.md  IMPLEMENTATION_SUMMARY.md  IP_BLOCK_SOLUTIONS.md  METADATA_EXPLANATION.md  METAMASK_HOODI_SETUP.md  MIRROR_VERIFICATION_REPORT.md  PROGRAM_ID_LOCATION.md  PROJECT_ANALYSIS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_VARA_ETH.md  READY_TO_TEST.md  RUN_AFTER_ETH.md  RUST_PROGRAM_DEPLOYMENT_LOCATION.md  SECURITY_AUDIT_SUMMARY.md  TESTNET_SETUP_GUIDE.md  TEST_RESULTS.md  VARA_ETH_CHAIN_EXPLANATION.md  VARA_ETH_CHAIN_ID.md  VARA_ETH_IMPLEMENTATION_PLAN.md  (+9 more)
FINALITY-main/backend/vara/: .binpath  Cargo.toml  build.rs
FINALITY-main/backend/vara/src/: lib.rs  market_engine.rs  trading_bot.rs  types.rs
config/: deployed.market.json  (+3 more)
smart-contracts/finality-market/app/: Cargo.toml
smart-contracts/finality-market/app/src/: lib.rs  oracle.rs  vft.rs
smart-contracts/finality-market/wasm/: .binpath  Cargo.toml
smart-contracts/finality-market/wasm/src/: lib.rs
(+236 files in other folders)
